--- a/README
+++ b/README
@@ -10,3 +10,5 @@ il mio rds si chiama "LuchiniChiaraEsameFin1" perchè ne avevo già creato uno, 
 2.5:
 - una macchina ec2 
 - un rds
+- una pipeline (Descritta sopra)
+- 
